# LiteGDK

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  basic_3d.html  basic_3d.js  basic_3d.wasm  hello_text.data  hello_text.html  hello_text.js  hello_text.wasm  pull_request_template.md  simple_audio.html  simple_audio.js  simple_audio.wasm  sprite_movement.html  sprite_movement.js  sprite_movement.wasm
.github/workflows/: ci.yml  web-deploy.yml
docs/: 2026-03-07-m0-completion-plan.md  getting-started-vscode.md  getting-started-web.md  plan-web-wasm-deployment.md  prd.json
docs/compatibility/: commands.md  smoke-samples.md
docs/contributing/: definition-of-done.md  tooling.md
docs/design/: LiteGDK_Design_Specification.md  LiteGDK_PRD.md
docs/releases/: preview-0.1.md
docs/testing/: testing-strategy.md
examples/: CMakeLists.txt
examples/textbook/: CMakeLists.txt  ExampleAssets.h  basic_3d.cpp  hello_text.cpp  simple_audio.cpp  sprite_movement.cpp
examples/textbook/assets/: player.ppm
include/: DarkGDK.h
include/LiteGDK/: Basic3D.h  Compatibility.h  Config.h  Core.h  Images.h  Input.h  Runtime.h  Sound.h  Sprites.h  System.h  Text.h  Types.h
src/backend/: RaylibBackend.cpp
src/basic3d/: Basic3DCommands.cpp  Basic3DCommands.h  CameraState.cpp  CameraState.h  ObjectRegistry.cpp  ObjectRegistry.h  Types.h
src/compat/: Basic3D.cpp  DarkGDK.cpp  Images.cpp  Input.cpp  Sound.cpp  Sprites.cpp  Text.cpp
src/core/: DarkGDKMain.cpp  FrameRunner.cpp  FrameRunner.h  Lifecycle.cpp  Lifecycle.h
src/images/: ImageCommands.cpp  ImageCommands.h  ImageRegistry.cpp  ImageRegistry.h
src/input/: InputCommands.cpp  InputCommands.h  InputKeys.h  InputSnapshot.cpp  InputSnapshot.h
src/runtime/: AppRuntime.cpp  AppRuntime.h  Backend.h  ColorUtils.h  Diagnostics.cpp  Diagnostics.h  FrameState.cpp  FrameState.h  HandlePolicies.h  Registry.h  Runtime.cpp
src/sound/: AudioCommands.cpp  AudioCommands.h  MusicRegistry.cpp  MusicRegistry.h  SoundRegistry.cpp  SoundRegistry.h
src/sprites/: SpriteCommands.cpp  SpriteCommands.h  SpriteRegistry.cpp  SpriteRegistry.h
src/system/: SystemServices.cpp  SystemServices.h
src/text/: TextCommands.cpp  TextCommands.h  TextService.cpp  TextService.h
tests/compile/: test_darkgdk_header_smoke.cpp
tests/fixtures/assets/: test_image.ppm
tests/helpers/: RuntimeTestContext.h  TestBackend.h
tests/integration/basic3d/: test_basic3d_smoke.cpp
tests/integration/core/: test_darkgdk_entrypoint.cpp  test_loop_gdk.cpp
tests/integration/images/: test_image_smoke.cpp
tests/integration/input/: test_input_smoke.cpp
tests/integration/samples/: SampleHarness.h  test_arcade_sample.cpp  test_multimedia_sample.cpp
tests/integration/sound/: test_sound_smoke.cpp
tests/integration/sprites/: test_render_order_smoke.cpp  test_sprite_smoke.cpp
tests/integration/text/: test_text_smoke.cpp
tests/unit/basic3d/: test_basic3d_commands.cpp  test_camera_state.cpp  test_object_registry.cpp
tests/unit/core/: test_frame_runner.cpp  test_lifecycle.cpp
tests/unit/images/: test_image_commands.cpp  test_image_registry.cpp
tests/unit/input/: test_input_commands.cpp  test_input_snapshot.cpp
tests/unit/runtime/: test_diagnostics.cpp  test_registry.cpp  test_render_order.cpp  test_runtime.cpp
tests/unit/sound/: test_audio_commands.cpp  test_audio_registry.cpp
tests/unit/sprites/: test_sprite_commands.cpp  test_sprite_registry.cpp
tests/unit/system/: test_system.cpp
tests/unit/text/: test_text.cpp
web/: index.html  shell.html
